--- a/index.html
+++ b/index.html
@@ -4,11 +4,101 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>No Matter Blaster</title>
-  <!-- Updated Brython Script (Version 3.12.0) -->
+  <!-- Using Brython Version 3.12.0 -->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.12.0/brython.min.js"></script>
   <style>
-    /* [Your existing styles remain unchanged] */
-    /* ... */
+    /* -------------------------
+       BASIC STYLING
+       ------------------------- */
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: black;
+      overflow: hidden;
+      font-family: 'Press Start 2P', cursive;
+      color: white;
+    }
+
+    #loading-bar-container {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+    }
+
+    #loading-text {
+      margin-bottom: 20px;
+      font-size: 24px;
+    }
+
+    #loading-bar {
+      width: 300px;
+      height: 30px;
+      border: 2px solid white;
+      position: relative;
+      background-color: #555;
+    }
+
+    #loading-progress {
+      width: 0%;
+      height: 100%;
+      background-color: white;
+      animation: load 5s linear forwards; /* Extended duration to 5 seconds */
+    }
+
+    @keyframes load {
+      from { width: 0%; }
+      to { width: 100%; }
+    }
+
+    #press-start-text {
+      margin-top: 20px;
+      font-size: 20px;
+      display: none;
+      animation: blink 1s step-start infinite;
+    }
+
+    @keyframes blink {
+      50% { opacity: 0; }
+    }
+
+    #high-score-modal {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #333;
+      padding: 20px;
+      border: 2px solid white;
+      z-index: 1000;
+    }
+
+    #high-score-modal-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    #high-score-modal-content input {
+      padding: 5px;
+      margin-bottom: 10px;
+      width: 200px;
+    }
+
+    #high-score-modal-content button {
+      padding: 5px 10px;
+      cursor: pointer;
+    }
+
+    /* -------------------------
+       CANVAS STYLING
+       ------------------------- */
+    canvas {
+      display: none;
+      background-color: #000;
+    }
   </style>
 </head>
 <body onload="brython()">
@@ -23,7 +113,7 @@
   </div>
 
   <!-- GAME CANVAS -->
-  <canvas id="game-canvas" width="800" height="600" style="display:none;"></canvas>
+  <canvas id="game-canvas" width="800" height="600"></canvas>
 
   <!-- AUDIO ELEMENTS -->
   <audio id="title-audio" src="title_audio.mp3" loop></audio>
@@ -43,14 +133,13 @@
   <div id="high-score-modal">
     <div id="high-score-modal-content">
       <p>New High Score! Enter your name:</p>
-      <input type="text" id="player-name">
+      <input type="text" id="player-name" placeholder="Your Name">
       <button id="submit-name">Submit</button>
     </div>
   </div>
 
   <script type="text/python">
     from browser import document, html, window
-    import math  # Correctly imported as a standalone module
 
     # ---------------------------------------------------------
     # GAME CONSTANTS (collision boxes, speeds, bullet sizes, etc.)
@@ -262,7 +351,7 @@
             for r in range(rows):
                 for c in range(cols):
                     img = current_level_images[
-                        int(math.floor(window.Math.random() * len(current_level_images)))
+                        int(window.Math.floor(window.Math.random() * len(current_level_images)))
                     ]
                     enemies.append({
                         "pos": [c * (ENEMY_SIZE + 10) + 50,
@@ -656,7 +745,7 @@
             # Collisions with boss
             for bullet in bullets[:]:
                 if (boss_pos[0] <= bullet[0] <= boss_pos[0] + BOSS_SIZE and
-                    boss_pos[1] <= bullet[1] <= boss_pos[1] + BOSS_SIZE):
+                    boss_pos[1] <= bullet["y"] <= boss_pos[1] + BOSS_SIZE):
                     bullets.remove(bullet)
                     boss_hits += 1
                     explosion_audio.play()
@@ -664,7 +753,7 @@
         # Collisions with player
         for bullet in enemy_bullets[:]:
             if (player_pos[0] <= bullet[0] <= player_pos[0] + PLAYER_SIZE and
-                player_pos[1] <= bullet[1] <= player_pos[1] + PLAYER_SIZE):
+                player_pos[1] <= bullet["y"] <= player_pos[1] + PLAYER_SIZE):
                 game_over = True
 
         for laser in laser_beams[:]:
@@ -846,7 +935,7 @@
         loading_bar_container.style.display = "flex"
         press_start_text.style.display = "none"
         canvas.style.display = "none"
-        window.setTimeout(show_title_screen, 3000)  # Extended loading time
+        window.setTimeout(show_title_screen, 5000)  # Extended loading time to 5 seconds
 
     initialize_high_score()
     start_loading()
@@ -869,4 +958,3 @@
   </script>
 </body>
 </html>
-
