--- a/index.html
+++ b/index.html
@@ -2,102 +2,107 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>No Matter Blaster</title>
-  <!-- Using Brython Version 3.12.0 -->
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.12.0/brython.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.9.5/brython.min.js"></script>
   <style>
-    /* -------------------------
-       BASIC STYLING
-       ------------------------- */
     body {
-      margin: 0;
-      padding: 0;
+      text-align: center;
       background-color: black;
-      overflow: hidden;
-      font-family: 'Press Start 2P', cursive;
       color: white;
+      font-family: 'Press Start 2P', monospace;
+      overflow: hidden;
     }
+    canvas {
+      border: 8px solid #00ff00;
+      border-radius: 10px;
+      box-shadow: 0 0 20px #00ff00, 0 0 40px #00ff00, 0 0 60px #00ff00, 0 0 80px #00ff00;
+      display: block;
+      margin: 20px auto;
+      background-color: #000;
+    }
+    @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
+    @keyframes breathing {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.1); }
+      100% { transform: scale(1); }
+    }
+    @keyframes fill {
+      0% { width: 0; }
+      100% { width: 100%; }
+    }
+    #title-img {
+      animation: breathing 3s infinite;
+    }
     #loading-bar-container {
       position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-    }
-
-    #loading-text {
-      margin-bottom: 20px;
-      font-size: 24px;
-    }
-
-    #loading-bar {
-      width: 300px;
-      height: 30px;
-      border: 2px solid white;
-      position: relative;
-      background-color: #555;
-    }
-
-    #loading-progress {
-      width: 0%;
+      width: 100%;
       height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: black;
+    }
+    #loading-bar {
+      width: 50%;
+      height: 30px;
       background-color: white;
-      animation: load 5s linear forwards; /* Extended duration to 5 seconds */
-    }
-
-    @keyframes load {
-      from { width: 0%; }
-      to { width: 100%; }
-    }
-
-    #press-start-text {
+      border: 3px solid #00ff00;
+      border-radius: 5px;
+      overflow: hidden;
       margin-top: 20px;
-      font-size: 20px;
-      display: none;
-      animation: blink 1s step-start infinite;
     }
-
-    @keyframes blink {
-      50% { opacity: 0; }
+    #loading-progress {
+      height: 100%;
+      width: 0;
+      background-color: #00ff00;
+      animation: fill 3s linear forwards;
     }
-
+    #loading-text {
+      font-size: 24px;
+      font-family: 'Press Start 2P', monospace;
+      color: white;
+      font-weight: bold;
+    }
     #high-score-modal {
       display: none;
       position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: #333;
-      padding: 20px;
-      border: 2px solid white;
-      z-index: 1000;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0, 0, 0, 0.9);
+      color: white;
+      font-family: 'Press Start 2P', monospace;
     }
-
     #high-score-modal-content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      background-color: black;
+      margin: 15% auto;
+      padding: 20px;
+      border: 3px solid #00ff00;
+      width: 80%;
+      max-width: 400px;
+      text-align: center;
     }
-
-    #high-score-modal-content input {
-      padding: 5px;
+    #player-name {
+      width: 80%;
+      height: 40px;
+      font-size: 20px;
+      font-family: 'Press Start 2P', monospace;
       margin-bottom: 10px;
-      width: 200px;
     }
-
-    #high-score-modal-content button {
-      padding: 5px 10px;
+    #submit-name {
+      width: 80%;
+      height: 40px;
+      font-size: 20px;
+      font-family: 'Press Start 2P', monospace;
+      background-color: #00ff00;
+      border: none;
       cursor: pointer;
-    }
-
-    /* -------------------------
-       CANVAS STYLING
-       ------------------------- */
-    canvas {
-      display: none;
-      background-color: #000;
     }
   </style>
 </head>
@@ -109,15 +114,13 @@
     <div id="loading-bar">
       <div id="loading-progress"></div>
     </div>
-    <div id="press-start-text">Press Space to Start</div>
   </div>
 
   <!-- GAME CANVAS -->
-  <canvas id="game-canvas" width="800" height="600"></canvas>
+  <canvas id="game-canvas" width="800" height="600" style="display:none;"></canvas>
 
   <!-- AUDIO ELEMENTS -->
   <audio id="title-audio" src="title_audio.mp3" loop></audio>
-  <audio id="level1-audio" src="level1_audio.mp3" loop></audio>
   <audio id="level2-audio" src="level2_audio.mp3" loop></audio>
   <audio id="level3-audio" src="level3_audio.mp3" loop></audio>
   <audio id="boss-audio" src="boss_audio.mp3" loop></audio>
@@ -133,7 +136,7 @@
   <div id="high-score-modal">
     <div id="high-score-modal-content">
       <p>New High Score! Enter your name:</p>
-      <input type="text" id="player-name" placeholder="Your Name">
+      <input type="text" id="player-name">
       <button id="submit-name">Submit</button>
     </div>
   </div>
@@ -175,7 +178,6 @@
     showing_final_score = False
     showing_high_score_prompt = False
     final_score_scheduled = False
-    showing_press_start_screen = False
 
     ENEMY_SPEED = 1.5
     flash_text = True
@@ -254,7 +256,6 @@
     # AUDIO ELEMENTS
     # --------------------
     title_audio  = document["title-audio"]
-    level1_audio = document["level1-audio"]
     level2_audio = document["level2-audio"]
     level3_audio = document["level3-audio"]
     boss_audio   = document["boss-audio"]
@@ -268,30 +269,32 @@
     loading_bar_container = document["loading-bar-container"]
     loading_bar = document["loading-bar"]
     loading_progress = document["loading-progress"]
-    press_start_text = document["press-start-text"]
 
     high_score_modal = document["high-score-modal"]
     player_name_input = document["player-name"]
     submit_name_button = document["submit-name"]
 
-    # -------------------------
-    # AUDIO CONTROL FUNCTIONS
-    # -------------------------
+    # -------------
+    # AUDIO CONTROL
+    # -------------
     def stop_all_music():
-        """Pause and reset all music tracks."""
+        """Pause and reset all music tracks to time=0."""
         title_audio.pause();  title_audio.currentTime  = 0
-        level1_audio.pause(); level1_audio.currentTime = 0
         level2_audio.pause(); level2_audio.currentTime = 0
         level3_audio.pause(); level3_audio.currentTime = 0
         boss_audio.pause();   boss_audio.currentTime   = 0
 
     def set_music_for_level(current_level):
         """
-        Stop all audio, then play the corresponding level's audio on loop.
+        Stop all audio, then:
+          - Level 1 => title_audio
+          - Level 2 => level2_audio
+          - Level 3 => level3_audio
+          - Level > 3 => boss_audio
         """
         stop_all_music()
         if current_level == 1:
-            level1_audio.play()
+            title_audio.play()
         elif current_level == 2:
             level2_audio.play()
         elif current_level == 3:
@@ -301,7 +304,7 @@
             boss_audio.play()
 
     def set_music_for_title_screen():
-        """Play the title audio on loop."""
+        """Plays the title audio for the title page."""
         stop_all_music()
         title_audio.play()
 
@@ -317,16 +320,23 @@
         return (w * ratio, h * ratio)
 
     # -------------------------------------------------
-    # LOADING SCREEN UTILITIES
+    # LOADING SCREEN UTILS (OPTIONAL)
     # -------------------------------------------------
+    def asset_loaded(event):
+        global assets_loaded
+        assets_loaded += 1
+        progress = (assets_loaded / total_assets) * 100
+        loading_progress.style.width = f"{progress}%"
+        if assets_loaded == total_assets:
+            show_title_screen()
+
     def show_title_screen():
-        """Transition from loading screen to title screen."""
         loading_bar_container.style.display = "none"
         press_start_text.style.display = "block"  # Show "Press Space to Start"
         canvas.style.display = "block"
-        global showing_press_start_screen
-        showing_press_start_screen = True
-        animate_press_start_screen()
+        set_music_for_title_screen()       # <--- Start title music
+        initialize_high_score()
+        window.requestAnimationFrame(animate_title_screen)  # Initiate animation loop
 
     # ------------------------------
     # GAME INITIALIZATION / RESET
@@ -351,7 +361,7 @@
             for r in range(rows):
                 for c in range(cols):
                     img = current_level_images[
-                        int(window.Math.floor(window.Math.random() * len(current_level_images)))
+                        int(window.Math.random() * len(current_level_images))
                     ]
                     enemies.append({
                         "pos": [c * (ENEMY_SIZE + 10) + 50,
@@ -387,7 +397,7 @@
 
     def reset_game():
         """
-        Resets the game to initial state and returns to title screen.
+        Called when we want to return to the title screen after game over or a completed run.
         """
         global level, game_started, game_over, score
         global showing_level_title, showing_high_score_prompt, showing_final_score
@@ -403,8 +413,7 @@
         final_score_scheduled = False
 
         set_music_for_title_screen()  # Play title audio on loop
-        showing_press_start_screen = True
-        animate_press_start_screen()
+        window.requestAnimationFrame(animate_title_screen)  # Initiate animation loop
 
     # ----------------------
     # DRAWING / RENDERING
@@ -414,7 +423,8 @@
         move_stars()
         draw_stars()
 
-        title_width, title_height = 800, 200
+        # Adjusted title dimensions for better centering
+        title_width, title_height = 600, 150  # Adjust as per your title image
         ctx.drawImage(
             title_img,
             (WIDTH - title_width) // 2,
@@ -427,7 +437,7 @@
             ctx.fillStyle = "white"
             ctx.font = "bold 28px 'Press Start 2P'"
             ctx.textAlign = "center"
-            ctx.fillText("Press Space to Start", WIDTH // 2, HEIGHT // 1.7)
+            ctx.fillText("Press Space to Play", WIDTH // 2, HEIGHT // 1.7)
 
         ctx.font = "bold 28px 'Press Start 2P'"
         ctx.fillText("Leaderboard", WIDTH // 2, HEIGHT // 1.3 - 40)
@@ -511,7 +521,7 @@
             ctx.fillStyle = "rgba(0, 0, 255, 0.1)"
         ctx.fillRect(0, 0, WIDTH, HEIGHT)
 
-        if showing_press_start_screen:
+        if not game_started:
             draw_start_screen()
         elif showing_level_title:
             draw_level_title()
@@ -589,23 +599,22 @@
             if len(enemies) == 0 and level <= MAX_LEVELS and not game_over:
                 level_up()
 
-    # ---------------------------
-    # LEVEL UP FUNCTION
-    # ---------------------------
-    def level_up():
-        global level, showing_level_title, score
-        level += 1
-        time_bonus = max(
-            0,
-            int((120000 - (window.Date.new().getTime() - level_start_time)) / 800)
-        )
-        score += time_bonus
-        showing_level_title = True
-        draw_level_title()
+    def show_final_score():
+        global high_score_updated, showing_high_score_prompt, showing_final_score
+        high_score_updated = False
 
-    # ---------------------------
-    # HIGH SCORE SUBMISSION
-    # ---------------------------
+        for i in range(len(top_scores)):
+            if score > top_scores[i]["score"]:
+                high_score_updated = True
+                showing_high_score_prompt = True
+                break
+
+        showing_final_score = True
+        draw_final_score()
+
+    # --------------------------------
+    # HIGH SCORE: SUBMIT / FETCH / UPDATE
+    # --------------------------------
     def submit_name(event):
         global top_scores, score
         player_name = player_name_input.value.strip()
@@ -618,9 +627,6 @@
 
     submit_name_button.bind("click", submit_name)
 
-    # ---------------------------
-    # GITHUB ACTION TRIGGER
-    # ---------------------------
     def transform_token():
         placeholder = 'a' * 40
         token = list(placeholder)
@@ -796,9 +802,9 @@
 
         draw()
 
-    # ---------------------------
-    # ENEMY SHOOTING FUNCTION
-    # ---------------------------
+    # -------------
+    # ENEMY SHOOTING
+    # -------------
     def enemy_shoot():
         global game_over, game_started, showing_level_title
         global boss_last_laser, boss_last_diagonal_shot
@@ -842,27 +848,40 @@
                 })
                 boss_last_diagonal_shot = current_time
 
-    # ---------------------------
-    # KEYBOARD EVENT HANDLER
-    # ---------------------------
-    def handle_keydown(event):
-        global game_started, game_over, player_last_shot, showing_press_start_screen, showing_title_screen
+    # -----------
+    # LEVEL UP
+    # -----------
+    def level_up():
+        global level, showing_level_title, score
+        level += 1
+        time_bonus = max(
+            0,
+            int((120000 - (window.Date.new().getTime() - level_start_time)) / 800)
+        )
+        score += time_bonus
+        showing_level_title = True
+        draw_level_title()
+
+    # -----------
+    # START GAME
+    # -----------
+    def start_game():
+        """Triggered when the player presses Space to start the game."""
+        global showing_level_title, game_started, level
+        level = 1  # Initialize at Level 1
+        showing_level_title = True  # Trigger the level title screen
+        game_started = True
+        draw_level_title()  # Display the Level 1 title
+
+    def move_player(event):
+        global game_started, game_over, player_last_shot
         current_time = window.Date.new().getTime()
 
         if event.keyCode == 32:  # SPACE
-            if showing_press_start_screen:
-                # User presses Space to start and enable audio
-                showing_press_start_screen = False
-                set_music_for_title_screen()  # Start title audio
-                window.console.log("Title audio started.")
-                showing_title_screen = True
-                animate_title_screen()
-            elif showing_title_screen:
-                # User presses Space on title screen to start Level 1
-                showing_title_screen = False
-                showing_level_title = True
-                draw_level_title()
-            elif game_started and not showing_level_title and not game_over:
+            if not game_started:
+                # Start the game from the title screen
+                start_game()
+            elif not showing_level_title and not game_over:
                 # Fire bullet if not on cooldown
                 if current_time - player_last_shot > player_shot_cooldown:
                     bullets.append([
@@ -882,16 +901,13 @@
             elif event.keyCode == 39 and player_pos[0] < WIDTH - PLAYER_SIZE:
                 player_pos[0] += PLAYER_SPEED
 
-    # ---------------------------
-    # FLASH TEXT TOGGLE
-    # ---------------------------
     def toggle_flash_text():
         global flash_text
         flash_text = not flash_text
 
-    # ---------------------------
-    # HIGH SCORE FETCHING
-    # ---------------------------
+    # -----------
+    # HIGH SCORES
+    # -----------
     def initialize_high_score():
         global top_scores
         timestamp = window.Date.new().getTime()
@@ -908,53 +924,36 @@
         global top_scores
         top_scores = data
 
-    # ---------------------------
-    # AUDIO INITIATION ON USER INTERACTION
-    # ---------------------------
-    def enable_audio(event):
-        # Play a silent sound to enable audio playback
-        title_audio.play().then(lambda _: None).catch(lambda _: None)
-        document.unbind("click", enable_audio)
-        document.unbind("keydown", enable_audio)
-
-    # ---------------------------
+    # -----------
     # EVENT BIND
-    # ---------------------------
-    document.bind("keydown", handle_keydown)
+    # -----------
+    document.bind("keydown", move_player)
     window.setInterval(update, 30)
     window.setInterval(enemy_shoot, 500)
     window.setInterval(toggle_flash_text, 1000)
-    window.bind("click", enable_audio)  # Enable audio on click
-    document.bind("keydown", enable_audio)  # Enable audio on keydown
 
-    # -----------
-    # INITIALIZATION
-    # -----------
-    def start_loading():
-        """Display the loading screen and start loading process."""
-        loading_bar_container.style.display = "flex"
-        press_start_text.style.display = "none"
-        canvas.style.display = "none"
-        window.setTimeout(show_title_screen, 5000)  # Extended loading time to 5 seconds
-
-    initialize_high_score()
-    start_loading()
-
-    # ---------------------------
+    # -------------------
     # ANIMATION FUNCTIONS
-    # ---------------------------
-    def animate_press_start_screen(frame):
-        if showing_press_start_screen:
-            draw_start_screen()
-            window.requestAnimationFrame(animate_press_start_screen)
-
+    # -------------------
     def animate_title_screen(frame):
-        if showing_title_screen:
+        if not game_started:
             draw_start_screen()
             window.requestAnimationFrame(animate_title_screen)
 
-    animate_press_start_screen(0)
+    # -----------
+    # START GAME
+    # -----------
+    def show_loading_screen():
+        """Displays the loading screen and starts the loading process."""
+        loading_bar_container.style.display = "flex"
+        canvas.style.display = "none"
+        window.setTimeout(show_title_screen, 3000)  # Loading time remains 3 seconds
+
+    # -------------------
+    # INITIALIZATION
+    # -------------------
+    show_loading_screen()
+
   </script>
 </body>
 </html>
-
